--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
 		"nette/security": "^3.2",
 		"nette/utils": "^4.0",
 		"latte/latte": "^3.0",
-		"tracy/tracy": "^2.10"
+		"tracy/tracy": "^2.10",
+		"nettrine/orm": "^0.8.4",
+		"contributte/console": "^0.10.1"
 	},
 	"require-dev": {
 		"nette/tester": "^2.5",
