--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"latte/latte": "^3.0",
 		"tracy/tracy": "^2.10",
 		"nettrine/orm": "^0.8.4",
-		"contributte/console": "^0.10.1"
+		"contributte/console": "^0.10.1",
+		"nettrine/migrations": "^0.10.1"
 	},
 	"require-dev": {
 		"nette/tester": "^2.5",
@@ -28,7 +29,8 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"App\\": "app"
+			"App\\": "app",
+                        "tests\\": "tests"
 		}
 	},
 	"minimum-stability": "stable",
